--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <header>
       <figure>
-        <img src="https:/link.scidroid.me/avatar.png" alt="SciDroid avatar" />
+        <img src="./avatar.png" alt="SciDroid avatar" />
       </figure>
       <h1>@SciDroid <i class="fas fa-check-circle" style="color: aqua"></i></h1>
       <p>Web Dev</p>
