--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h2>Links</h2>
         <a href="https://scidroid.me/" target="_blank" rel="noopener noreferrer"
           >Portfolio</a
-        ><a href="https://dev.to/" target="_blank" rel="noopener noreferrer"
+        ><a href="https://dev.to/scidroid" target="_blank" rel="noopener noreferrer"
           >Blog</a
         ><a
           href="https://scidroid.me/estructura"
